1999-02-18    <mgd@HELEN>

	* win32dib.c (dib_fill): In 24 bit case, adjust frame width up to
	four byte boundary.  Compute ybase from this adjusted width and clipx.

	* internal.m (tkobjc_pixmap_create): Round width and row_width
	(new variable) up to a four byte boundary.  row_width adjusts
	adjusts for 8/24 bit width.  Set new variable row_pos from
	row_width * ri and assign color indexes / color values to it.

1999-02-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* win32dib.c (dib_rectangle): Compute ending y using height, not
	width.  Thanks to Glen Ropella <gepr@swarm.com>.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT): Bump.  Version 1.4.1.

1999-02-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ArchivedGeometryWidget.[hm] ([ArchivedGeometryWidget
	-updateArchiver:]): Add archiver argument.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (raster_private): Add a privateColormapFlag
	(tkobjc_raster_create): Initialize it.
	(tkobjc_raster_setColormap): If private colormap is created,
	set privateColormapFlag.  Don't do it twice.
	(tkobjc_raster_drawPoint): Reverse rgb order.

	* Colormap.m, Graph.m, Histogram.m, Pixmap.m, Widget.m,
	WindowGeometryRecord.m, ZoomRaster.m: Change from raiseEvent:
	to raiseEvent().

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-loadWindowGeometryRecord], [ArchivedGeometryWidget
	-updateArchiver], [ArchivedGeometryWidget -drop]): 
	Use lispArchiver instead of archiver.

	* internal.m (x_set_private_colormap, tkobjc_raster_setColormap):
	Use WarningMessage instead of Warning.
	(xpmerrcheck): Use WarningMessage instead of Warning and
	PixmapError instead of Error.

	* win32dib.c (get_color): New function.
	(dib_augmentPalette, dib_fill, dib_ellipse, dib_line, dib_rectangle): 
	Use it.
	win32dib.c (dib_fill): Array order is B, G, R.

	* win32dib.[ch]: colorMap -> colormap throughout.
	* win32dib.[hc] (dib_fill, dib_ellipse, dib_line, dib_rectangle): 